syntax = "proto3";
package carkot;

message RouteRequest {
    repeated int32 moveTime = 1; 
    repeated int32 moveDirection = 2;
}

message RouteResponse {
    int32 code = 1;
}
